@@ -2135,7 +2135,7 @@ SCIP_RETCODE separateCons(
    return SCIP_OKAY;
 }
 
-/** Transform linear system \f$A x = b\f$ into row echolon form via the Gauss algorithm with row pivoting over GF2
+/** Transform linear system \f$A x = b\f$ into row echelon form via the Gauss algorithm with row pivoting over GF2
  *  @returns the rank of @p A
  *
  *  Here, \f$A \in R^{m \times n},\; b \in R^m\f$. On exit, the vector @p p contains a permutation of the row indices
@@ -2143,12 +2143,12 @@ SCIP_RETCODE separateCons(
  *  s[i] contains the column index of the first nonzero in row @p i.
  */
 static
-int computeRowEcholonGF2(
+int computeRowEchelonGF2(
    SCIP*                 scip,               /**< SCIP data structure */
    int                   m,                  /**< number of rows */
    int                   n,                  /**< number of columns */
    int*                  p,                  /**< row permutation */
-   int*                  s,                  /**< steps indicators of the row echolon form */
+   int*                  s,                  /**< steps indicators of the row echelon form */
    Type**                A,                  /**< matrix */
    Type*                 b                   /**< rhs */
    )
@@ -2170,7 +2170,7 @@ int computeRowEcholonGF2(
       s[i] = i;
    }
 
-   /* loop through possible steps in echolon form (stop at min {n, m}) */
+   /* loop through possible steps in echelon form (stop at min {n, m}) */
    for (i = 0; i < m && i < n; ++i)
    {
       assert( s[i] == i );
@@ -2248,16 +2248,16 @@ int computeRowEcholonGF2(
    return m;
 }
 
-/** Construct solution from matrix in row echolon form over GF2
+/** Construct solution from matrix in row echelon form over GF2
  *
- *  Compute solution of \f$A x = b\f$, which is already in row echolon form (@see computeRowEcholonGF2()) */
+ *  Compute solution of \f$A x = b\f$, which is already in row echelon form (@see computeRowEchelonGF2()) */
 static
-void solveRowEcholonGF2(
+void solveRowEchelonGF2(
    int                   m,                  /**< number of rows */
    int                   n,                  /**< number of columns */
    int                   r,                  /**< rank of matrix */
    int*                  p,                  /**< row permutation */
-   int*                  s,                  /**< steps indicators of the row echolon form */
+   int*                  s,                  /**< steps indicators of the row echelon form */
    Type**                A,                  /**< matrix */
    Type*                 b,                  /**< rhs */
    Type*                 x                   /**< solution vector on exit */
@@ -2277,11 +2277,8 @@ void solveRowEcholonGF2(
    for (k = 0; k < n; ++k)
       x[k] = 0;
 
-   /* init last entry */
-   x[s[r-1]] = b[p[r-1]];
-
    /* loop backwards through solution vector */
-   for (i = r-2; i >= 0; --i)
+   for (i = r-1; i >= 0; --i)
    {
       Type val;
 
@@ -2304,11 +2301,11 @@ void solveRowEcholonGF2(
 /** solve equation system over GF 2 by Gauss algorithm and create solution out of it or return cutoff
  *
  *  Collect all information in xor constraints into a linear system over GF2. Then solve the system by computing a row
- *  echolon form. If the system is infeasible, the current node is infeasible. Otherwise, we can compute a solution for
+ *  echelon form. If the system is infeasible, the current node is infeasible. Otherwise, we can compute a solution for
  *  the xor constraints given. We check whether this gives a solution for the whole problem.
  *
  *  We sort the columns with respect to the product of the objective coefficients and 1 minus the current LP solution
- *  value. The idea is that columns that are likely to provide the steps in the row echolon form should appear towards
+ *  value. The idea is that columns that are likely to provide the steps in the row echelon form should appear towards
  *  the front of the matrix. The smaller the product, the more it makes sense to set the variable to 1 (because the
  *  solution value is already close to 1 and the objective function is small).
  *
@@ -2387,8 +2384,11 @@ SCIP_RETCODE checkSystemGF2(
             var = SCIPvarGetNegatedVar(var);
          assert( var != NULL );
 
+         /* get the active variable */
+         while ( var != NULL && SCIPvarGetStatus(var) == SCIP_VARSTATUS_AGGREGATED )
+            var = SCIPisEQ(scip, SCIPvarGetAggrScalar(var), 0.0) ? NULL : SCIPvarGetAggrVar(var);
          /* consider nonfixed variables */
-         if ( SCIPcomputeVarLbLocal(scip, var) < 0.5 && SCIPcomputeVarUbLocal(scip, var) > 0.5 )
+         if ( var != NULL && SCIPcomputeVarLbLocal(scip, var) < 0.5 && SCIPcomputeVarUbLocal(scip, var) > 0.5 )
          {
             /* consider active variables and collect only new ones */
             if ( SCIPvarIsActive(var) && ! SCIPhashmapExists(varhash, var) )
@@ -2452,7 +2452,7 @@ SCIP_RETCODE checkSystemGF2(
 
    /* Sort variables non-decreasingly with respect to product of objective and 1 minus the current solution value: the
     * smaller the value the better it would be to set the variable to 1. This is more likely if the variable appears
-    * towards the front of the matrix, because only the entries on the steps in the row echolon form will have the
+    * towards the front of the matrix, because only the entries on the steps in the row echelon form will have the
     * chance to be nonzero.
     */
    SCIPsortRealIntPtr(xorvals, xoridx, (void**) xorvars, nvarsmat);
@@ -2582,7 +2582,7 @@ SCIP_RETCODE checkSystemGF2(
    rank = -1;
    if ( ! SCIPisStopped(scip) )
    {
-      rank = computeRowEcholonGF2(scip, nconssmat, nvarsmat, p, s, A, b);
+      rank = computeRowEchelonGF2(scip, nconssmat, nvarsmat, p, s, A, b);
       assert( rank <= nconssmat && rank <= nvarsmat );
    }
 
@@ -2623,7 +2623,7 @@ SCIP_RETCODE checkSystemGF2(
 
             /* construct solution */
             SCIP_CALL( SCIPallocBufferArray(scip, &x, nvarsmat) );
-            solveRowEcholonGF2(nconssmat, nvarsmat, rank, p, s, A, b, x);
+            solveRowEchelonGF2(nconssmat, nvarsmat, rank, p, s, A, b, x);
 
 #ifdef SCIP_OUTPUT
             SCIPinfoMessage(scip, NULL, "Solution:\n");
@@ -2673,7 +2673,7 @@ SCIP_RETCODE checkSystemGF2(
 
                /* construct solution */
                SCIP_CALL( SCIPallocBufferArray(scip, &x, nvarsmat) );
-               solveRowEcholonGF2(nconssmat, nvarsmat, rank, p, s, A, b, x);
+               solveRowEchelonGF2(nconssmat, nvarsmat, rank, p, s, A, b, x);
 
 #ifdef SCIP_OUTPUT
                SCIPinfoMessage(scip, NULL, "Solution:\n");
